--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap');
+
 body {
+  font-family: 'Signika Negative', sans-serif;
   margin: 0;
   display: grid;
   place-items: center;
   min-height: 100vh;
+}
+
+*, *:before, *:after {
+  box-sizing: border-box;
 }
